<resources>
    <string name="app_name">Trafilt</string>
    <string name="sign_in">sign in</string>
    <string name="welcome">welcome,</string>
    <string name="sign_in_to_continue">sign in to continue</string>
    <string name="background_image">background_image</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="or">or</string>
    <string name="dont_have_an_account">Don’t have an account yet?</string>
    <string name="scan_only">scan only</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_create_an_account">Sign up to create an account</string>
    <string name="name">name</string>
    <string name="already_heave_an_account">Already heave an account?</string>
    <string name="title_activity_sell_trash">SellTrashActivity</string>

    <string name="invalid_name">Name empty</string>
    <string name="invalid_email">Incorrect email format</string>
    <string name="invalid_password">Password less than 8 characters</string>
    <string name="register_success">Registration Successful</string>
    <string name="already_exists">Account already exists</string>
    <string name="loading">Loading...</string>

    <string name="organik">Organik</string>
    <string name="anorganik">Anorganik</string>
    <string name="b3">B3</string>
    
    <string name="baterai_recommendation">Dibuang ke pengolahan limbah B3 terdekat</string>
    <string name="biologis_recommendation">Dapat dimanfaatkan sebagai pupuk organik</string>
    <string name="kaca_recommendation">Dibungkus dengan tebal dan diberi label (kaca) agar tidak membahayakan orang lain</string>
    <string name="kain_recommendation">Jika pakaian yang masih bagus bisa disumbangkan atau dapat diolah menjadi berbagai kerajinan</string>
    <string name="kardus_recommendation">Bisa diolah menjadi kerajinan atau dijual ke pengepul</string>
    <string name="kertas_recommendation">Bisa diolah menjadi kerajinan atau dijual ke pengepul</string>
    <string name="metal_recommendation">Bisa dijual ke pengepul.</string>
    <string name="plastik_recommendation">Untuk botol plastik bisa dijual ke pengepul</string>
    <string name="sepatu_recommendation">Jika masih layak pakai bisa disumbangkan atau dibuat kerajinan</string>

    <string name="login_fail">Login failed, check email/password</string>
    <string name="login_success">Login success, Welcome to trafilt </string>
    <string name="noted">Note : you can\'t register, because the service has expired.</string>
    <string name="login_info">Please login with email : afrinaldi@gmail.com and password : 12345678</string>
</resources>